[package]
name = "memflow-gdrv3"
version = "0.1.0"
edition = "2021"
readme = "README.md"


[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
aes = "*"
cbc = {version = "*", features = ["alloc"]}
memflow = { version = "0.2", features = ["plugins"] }
memflow-vdm = { git = "https://github.com/a2x/memflow-vdm" }
thiserror = "1.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
